@@ -3,6 +3,14 @@ v3.4.0-rc.3 (XXXX-XX-XX)
 * dynamically manage libcurl's number of open connections to increase performance
   by reducing the number of socket close and then reopen cycles
 
+* recover short server id from agency after a restart of a cluster node
+
+  this fixes problems with short server ids being set to 0 after a node restart,
+  which then prevented cursor result load-forwarding between multiple coordinators
+  to work properly
+
+  this should fix arangojs#573
+
 * include forward-ported diagnostic options for debugging LDAP connections
 
 * fixed internal issue #3065: fix variable replacements by the AQL query
